--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "stormtower",
 	"description": "stormtower handles the connectivity from stormflash agents and provides visibility, also acts as a translator between stormlight and agents",
-	"version": "1.0.0",
+	"version": "0.1.2",
 	"author": "Priyabrata Sahoo",
 	"homepage": "http://stormstack.org",
 	"repository": {
@@ -9,15 +9,14 @@
 		"url": "git://github.com/stormstack/stormtower.git"
 	},
 	"dependencies": {
-		"stormagent": "0.1.x",
+		"stormbolt": "0.2.x",
 		"request": "2.34.x",
 		"json-schema": "0.2.0",
 		"async": "0.8.x",
 		"node-uuid": "1.3.x",
 		"minimist":"0.1.0",
         "optimist":"0.6.0",
-		"find-in-path":"0.0.x",
-		"dirty": "0.9.x"
+		"find-in-path":"0.0.x"
 	},
 	"devDependencies": {
 		"coffee-script": ">=1.3"
@@ -29,12 +28,10 @@
 	"main": "./lib/stormtower",
 	"config": {
 		"port": 8020,
-		"uuid": "stormtower",
+		"uuid": "",
 		"stormbolt": "localhost:8000",
 		"logfile": "/var/log/stormtower.log",
-		"datadir": "/var/stormtower",
 		"storm": {
-			"agent": true,
 			"functions": [
 				"agent.getPollingData",
 				"agent.getGlobalChecksum",
@@ -47,10 +44,11 @@
 		}
 	},
 	"scripts": {
-		"prepublish": "find src -name '*.coffee' | xargs coffee -o lib -c",
+		"prepublish": "mkdir -p lib; find src -name '*.coffee' | xargs coffee -o lib -c",
 		"start": "node lib/app.js"
 	},
 	"contributors": [
-		"Sivaprasath Busa"
+		"Sivaprasath Busa",
+		"Peter Lee <peter@intercloud.net>"
 	]
 }
