--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "stormtower",
 	"description": "stormtower handles the connectivity from stormflash agents and provides visibility, also acts as a translator between stormlight and agents",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"author": "Priyabrata Sahoo",
 	"homepage": "http://stormstack.org",
 	"repository": {
@@ -17,7 +17,7 @@
 		"minimist":"0.1.0",
         "optimist":"0.6.0",
 		"find-in-path":"0.0.x",
-		"dirty": "0.9.x"
+		"stream-buffers":"0.2.x"
 	},
 	"devDependencies": {
 		"coffee-script": ">=1.3"
@@ -41,8 +41,8 @@
 		}
 	},
 	"scripts": {
-		"prepublish": "mkdir -p lib; find src -name '*.coffee' | xargs coffee -o lib -c",
-		"start": "node lib/app.js"
+		"prepublish": "mkdir -p lib; coffee -o lib -c src",
+		"start": "node lib/app"
 	},
 	"contributors": [
 		"Sivaprasath Busa",
