--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "stormtower",
 	"description": "stormtower handles the connectivity from stormflash agents and provides visibility, also acts as a translator between stormlight and agents",
-	"version": "1.1.7",
+	"version": "1.1.8",
 	"author": "Priyabrata Sahoo",
 	"homepage": "http://stormstack.org",
 	"repository": {
@@ -47,7 +47,7 @@
 	},
 	"scripts": {
 		"prepublish": "mkdir -p lib; coffee -o lib -c src",
-		"start": "node lib/app"
+		"start": "node --expose-gc lib/stormtower"
 	},
 	"contributors": [
 		"Sivaprasath Busa",
