STORM-80 : New JS files with memory leak fix, bumped the version

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 	},
 	"contributors": [
 		"Sivaprasath Busa",
-		"Peter Lee <peter@intercloud.net>"
+		"Peter Lee <peter@intercloud.net>",
+		"Suresh Kumar"
 	]
 }
