STORM-80 : #time 10m #comment - Removed GC from stormtower app

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 	},
 	"scripts": {
 		"prepublish": "mkdir -p lib; coffee -o lib -c src",
-		"start": "node --expose-gc lib/stormtower"
+		"start": "node lib/stormtower"
 	},
 	"contributors": [
 		"Sivaprasath Busa",
