STORM-87 #time 5m #comment removed relay.on 'sent' event handler and just proceed to call req.destroy() immediately following relay object return

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "stormtower",
 	"description": "stormtower handles the connectivity from stormflash agents and provides visibility, also acts as a translator between stormlight and agents",
-	"version": "1.2.3",
+	"version": "1.2.4",
 	"author": "Priyabrata Sahoo",
 	"homepage": "http://stormstack.org",
 	"repository": {
@@ -9,7 +9,7 @@
 		"url": "git://github.com/stormstack/stormtower.git"
 	},
 	"dependencies": {
-		"stormagent": "0.2.x",
+		"stormagent": ">=0.2.17",
 		"stormbolt": ">=0.3.10",
 		"request": "2.34.x",
 		"json-schema": "0.2.0",
