--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"url": "git://github.com/stormstack/stormtower.git"
 	},
 	"dependencies": {
-		"stormagent": ">=0.3.0",
+		"stormagent": "git+https://github.com/stormstack/stormagent/tree/feature/websocket.git",
 		"stormbolt": ">=0.4.0",
 		"request": "2.34.x",
 		"json-schema": "0.2.0",
